updated resume, projects section and modified portfolio url

--- a/Portfolio-main/package.json
+++ b/Portfolio-main/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://haldarsayan18.github.io/My_portfolio/",
+  "homepage": "https://haldarsayan18.github.io/SayanHaldar/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
